--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/014/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/014/a/index.xhtml
@@ -31,10 +31,10 @@
 					data-bind="click: createClassification , enable: true"
 					class="proceed btnStyle">#{i18n.getText('CMM014_2')}</button>
 				<!-- <button id="A_BTN_003" tabindex="3">#{i18n.getText('CMM014_3')}</button> -->
-				<button id="A_BTN_004" tabindex="4"
+				<button id="A_BTN_004" tabindex="3"
 					data-bind="click: deleteClassification , enable: enableDelete"
 					class="danger btnStyle">#{i18n.getText('CMM014_4')}</button>
-				<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button> 
+				<button tabindex="4" id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button> 
 
 			</div>
 
@@ -61,7 +61,7 @@
 							<td class="valign-center">
 								<div>
 									<div class="input_002">
-										<input id="clfCode" tabindex="6"
+										<input id="clfCode" tabindex="5"
 											data-bind="ntsTextEditor: {
 											name: '#[CMM014_6]',
                                             value: classificationCode,
@@ -71,7 +71,7 @@
 									</div>
 
 									<div class="input_002">
-										<input id="clfName" tabindex="7"
+										<input id="clfName" tabindex="6"
 											data-bind="ntsTextEditor: {
 												name: '#[CMM014_7]',
 	                                            value: classificationName,
@@ -91,7 +91,7 @@
 							</td>
 							<td class="valign-center">
 								<div>
-									<textarea id="memo" tabindex="8"
+									<textarea id="memo" tabindex="7"
 										style="margin-top: 20px; width: 446px; height: 180px; white-space: pre-wrap;"
 										data-bind="ntsMultilineEditor: {
 											name: '#[CMM014_8]',
