--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/010/kcp010.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/010/kcp010.xhtml
@@ -17,12 +17,12 @@
 					</td>
 					<td class="bg-green none_border wkp-tdpad">
 						<button class="btn_select" id="prev-btn"
-							data-bind="click: previousWkp, enable: isActivePreviousBtn(), attr: {tabindex: tabIndex}">
+							data-bind="click: previousWkp, enable: isActivePreviousBtn(), attr: {tabindex: tabIndex}">◀
 						</button>
 					</td>
 					<td class="bg-green border-right wkp-tdpad">
 						<button class="btn_select" id="next-btn"
-							data-bind="click: nextWkp, enable: isActiveNextBtn(), attr: {tabindex: tabIndex}">
+							data-bind="click: nextWkp, enable: isActiveNextBtn(), attr: {tabindex: tabIndex}">▶
 						</button>
 					</td>
 					<td class="none_border wkp-tdpad nts-searchbbox-wrapper"><input
