--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/b/index.xhtml
@@ -45,9 +45,9 @@
 					<div class="cf" data-bind="ntsSwitchButton: {
 						name: '#CPS003_17',
 						options: roundingRules,
-						optionsValue: 'value',
+						optionsValue: 'id',
 						optionsText: 'name',
-						value: selectedRuleCode,
+						value: mode,
 						required: true,
 						enable: true }"></div>
 				</div>
