--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/002/h/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/002/h/index.xhtml
@@ -47,7 +47,10 @@
 					<button tab-index="3" class="settingBtn" data-bind="click: $parent.viewmodelA.settingBtn.bind($parent.viewmodelA)">#{i18n.getText('KML002_3')}</button>
 <!-- 					<button tab-index="4" class="deleteBtn danger" data-bind="click: $parent.viewmodelA.deleteBtn.bind($parent.viewmodelA), enable: $parent.viewmodelA.items().length>0">#{i18n.getText('KML002_4')}</button>					 -->
 					<button tab-index="4" class="deleteBtn danger" data-bind="click: $parent.viewmodelA.deleteBtn.bind($parent.viewmodelA), enable: !$parent.viewmodelA.editMode()">#{i18n.getText('KML002_4')}</button>
+					
 				</com:ko-if>
+				
+				<button id="A_BTN_001" tabindex="5" data-bind="click: exportExcel">#{i18n.getText('KML002_154')}</button>
 			</div>
 			<div id="tabpanel-h" role="tabpanel" class="screen-h" data-bind="with: viewmodelH">
 				<div class="contents-area">
