QMM017 update change 128095, 128012

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/010/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/010/a/index.xhtml
@@ -115,7 +115,7 @@
                            data-bind="ntsTextEditor: {constraint: 'PostalCode',value: postalCode , name: '#[QMM010_14]'}"/>
                     <!--A3_13 郵便番号検索-->
                     <button style="margin-left: 5px;" tabindex="15"
-                            data-bind="click: $vm.searchPostalCode, enable: false ">#{i18n.getText('QMM010_15')}</button>
+                            data-bind="click: $vm.searchPostalCode">#{i18n.getText('QMM010_15')}</button>
                 </div>
 
                 <div class="flex valign-center row">
