QMM017 update change style and enum text resource

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
@@ -98,7 +98,7 @@
 }
 .search-box-sm input {
     margin-left: 40px;
-    width: 120px;
+    width: 120px !important;
 }
 .formula-button {
     width: 232px;
