--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/f/index.xhtml
@@ -245,11 +245,11 @@
                     </com:ko-if>
                     <com:ko-if bind="$vm.screenControl().visibleF3_18()">
                         <!--F3_18-->
-                        <div class="label label-annotate">値は「 ー999:59 ～ 999:59 」 の範囲で入力してください。</div>
+                        <div class="label label-annotate">#{i18n.getText('QMM019_224')}</div>
                     </com:ko-if>
                     <com:ko-if bind="$vm.screenControl().visibleF3_19()">
                         <!--F3_19-->
-                        <div class="label label-annotate">値は「 ー9,9999.99 ～ 99,999.99 」 の範囲で入力してください。</div>
+                        <div class="label label-annotate">#{i18n.getText('QMM019_225')}</div>
                     </com:ko-if>
                 </div>
                 <div class="cell valign-top">
