--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
@@ -57,7 +57,7 @@
                         </div>
                         <div data-bind = "if: calculationFormulaClassification() == 1">
                             <!--C2_7; C2_8-->
-                            <button class = "small" data-bind = "click: function(){$vm.doMasterConfiguration()}" tabindex="13">#{i18n.getText('QMM017_27')}</button>
+                            <button class = "small master-config-button" data-bind = "click: function(){$vm.doMasterConfiguration()}" tabindex="13">#{i18n.getText('QMM017_27')}</button>
                             <div style = "display: inline-block" data-bind = "text: displaySetting"></div>
                         </div>
                     </th>
