--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/c/index.xhtml
@@ -18,6 +18,7 @@
 			<com:scriptfile path="cps003.c.service.js" />
 			<com:scriptfile path="cps003.c.vm.js" />
 			<com:scriptfile path="cps003.c.start.js" />
+			<com:scriptfile path="../a/control.js" />
 		</ui:define>
 
 		<ui:define name="content">
