--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/c/cps003.c.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/c/cps003.c.style.css
@@ -6,3 +6,16 @@
 	float: right;
 	margin-right: 30px;
 }
+
+#grid {
+	margin-top: 30px;
+	margin-left: 20px;
+}
+
+td.required {
+	background-color: #FAC002 !important;
+}
+
+tr.blue-color {
+	color: blue;
+}
