--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/g/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/g/index.xhtml
@@ -21,14 +21,43 @@
 		</ui:define>
 
 		<ui:define name="content">
-			<div id="contents-area"
-				data-bind="let: { 
-						text: nts.uk.resource.getText
-					}>
+			<div id="functions-area">
+				<button id="" tabindex="1" >#{i18n.getText('CPS003_98')}</button>
+				<button id="" tabindex="2" >#{i18n.getText('CPS003_99')}</button>
 			</div>
-			<div id="functions-area-bottom">
-				<button class="proceed x-large" data-bind="">#{i18n.getText('CPS007_16')}</button>
-				<button data-bind="click: close">#{i18n.getText('CPS007_17')}</button>
+			<div id="contents-area" data-bind="">
+				<div class="errorNumberShowInPage">
+					<div id="combo-box" data-bind="ntsComboBox: {
+						name: 'Sample List',
+						options: itemListCbb1,
+						optionsValue: 'code',
+						visibleItemsCount: 5,
+						value: selectedCode,
+						optionsText: 'name',
+						editable: isEditable,
+						enable: isEnable,
+						required: isRequired,
+						selectFirstIfNull: selectFirstIfNull,
+						columns: [
+							{ prop: 'code', length: 4 },
+							{ prop: 'name', length: 10 },
+						]}"></div>						
+				</div>
+				<div class="gridList" >
+					<!-- <table id="single-list" data-bind="ntsGridList: {								
+						height: 350,
+						dataSource: items,
+						primaryKey: 'code',
+						columns: columns2,
+						deleteOptions : {visible : true, deleteField: 'deletable'},
+						features: [{name: 'Switch', options: switchOptions, optionsValue: 'code', optionsText: 'name'}],
+						multiple: false,
+						value: currentCode
+					}"></table> -->
+				</div>
+				<div class="showNumberOfpage">
+					<span>1 - 20/230 bug</span>
+				</div>
 			</div>
 		</ui:define>
 	</ui:composition>
