--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/b/index.xhtml
@@ -49,7 +49,7 @@
 						optionsText: 'name',
 						value: mode,
 						required: true,
-						enable: true }"></div>
+						enable: updateModeEnable }"></div>
 				</div>
 											
 			</div>
